--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 
 # Ignore application configuration
 /config/application.yml
+/config/secrets.yml
 
 #Ignore private_pub configuration
 /config/private_pub.yml
